--- a/vue-step-by-step/index.html
+++ b/vue-step-by-step/index.html
@@ -7,19 +7,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="h-full grid place-items-center">
-    <div id="app">
-      <app-button>Submit</app-button>
-    </div>
+    <div id="app"></div>
 
     <script type="module">
-      import AppButton from "./js/components/AppButton.js";
-      let app = {
-        components: {
-          "app-button": AppButton,
-        },
-      };
+      import App from "./js/components/App.js";
 
-      Vue.createApp(app).mount("#app");
+      Vue.createApp(App).mount("#app");
     </script>
   </body>
 </html>
